<resources>
    <string name="app_name">Assignment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mvp">MVP</string>
    <string name="mvvm">MVVM</string>
    <string name="enter_number_1">Enter number 1:</string>
    <string name="enter_number_2">Enter number 2:</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="multiply">MULTIPLY</string>
    <string name="divide">DIVIDE</string>
</resources>