<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvvm.MVVMFragment"
    android:background="@color/rose">

    <EditText
        android:id="@+id/first_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/enter_number_1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        />
    <EditText
        android:id="@+id/second_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:hint="@string/enter_number_2"
        app:layout_constraintTop_toBottomOf="@+id/first_num"
        />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RESULT"
        android:visibility="invisible"
        android:textSize="6pt"
        app:layout_constraintTop_toBottomOf="@+id/second_num">

    </TextView>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <Button
        android:id="@+id/subBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/subtract"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/addBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <Button
        android:id="@+id/multBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/multiply"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/subBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <Button
        android:id="@+id/divBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/divide"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/multBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>